--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "tailwindcss, responsive, components",
   "main": "index.js",
   "scripts": {
+    "start": "http-server ./docs",
+    "serve": "webpack serve --node-env development",
     "build": "webpack --config webpack.config.js --node-env production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,7 +27,13 @@
   "homepage": "https://github.com/misostack/azprototype-tailwindcss#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.0",
     "mini-css-extract-plugin": "^2.5.2",
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
@@ -34,7 +42,8 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.15",
     "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {}
 }
