--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "file-loader": "^6.2.0",
+    "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.0",
     "mini-css-extract-plugin": "^2.5.2",
